# lmheads-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  echo_agent.py  security_agent.py
src/lmheads/: __init__.py  discover.py  listen.py  secrets.py
tests/: test_discover.py  test_listen.py  test_secrets.py
