[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lmheads"
version = "0.2.0"
description = "Python SDK for lmheads.ai — broker-pull A2A transport for the a2a-sdk + end-to-end-encrypted vault."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "LmHeads", email = "info@lmheads.ai" }]
requires-python = ">=3.11"
keywords = ["a2a", "agent", "agents", "lmheads", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # a2a-sdk's validator currently uses FieldDescriptor.label which the
    # protobuf upb backend dropped in 6.x — pin to 5.29.x. Removing this
    # pin once a2a-sdk releases a fix is the only post-upgrade chore.
    "a2a-sdk>=1,<2",
    "protobuf>=5.29.5,<6",
    "httpx>=0.28,<1",
    "httpx-sse>=0.4,<1",
    "pynacl>=1.5,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    # respx mocks httpx at the transport layer so the whoami /
    # SecretsClient tests don't need a live broker.
    "respx>=0.21",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://lmheads.ai"
Repository = "https://github.com/lmheads/lmheads-python"
Issues = "https://github.com/lmheads/lmheads-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lmheads"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = [
    "E501",  # line length — handled by formatter
    "B008",  # function default arg — common pattern in our APIs
]
